Fix: some small css fixes for the side menu ( resp ww<=400px ) 1) apply a background with no transparency (the side menu occupies the whole window's width) 2) avoid page jumping when sticky-enabled

--- a/inc/assets/less/tc_custom_responsive.less
+++ b/inc/assets/less/tc_custom_responsive.less
@@ -694,6 +694,9 @@
     width: 400px;
     max-width: 100%;
   }
+  #tc-sn .nav-collapse {
+    background: #fff;
+  }
   /* when open, give to the menu a greater z-index
    */
   .tc-sn-visible:not(.sn-close) #tc-sn {
@@ -705,7 +708,6 @@
   /* Hack*/
   /* prevent pan in mobiles max-width: 400px: should we apply this for all tc-is-mobile losing the page scroll down ?? */
   .tc-sn-visible #tc-page-wrap { position: absolute; width: 100%;}
-  .tc-sn-visible.sticky-enabled.admin-bar #tc-page-wrap { top: 0; }
   /*end prevent overflows in mobiles */
 }
 @media (max-width: 320px) {
